[package]
name = "overtime-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
colored = "2.1.0"
group-by = "1.0.0"
num-traits = "0.2.17"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
